<resources>
    <string name="app_name">Tran_Vincent_Chapter1</string>
    <string name="subtotal">Subtotal</string>
    <string name="participants">Participants</string>
    <string name="split">Split the Bill!</string>
    <string name="tax">State Tax</string>
    <string name="title">Bill Splitter App</string>
    <string name="five">5%</string>
    <string name="zero">0%</string>
    <string name="ten">10%</string>
    <string name="fifteen">15%</string>
    <string name="twenty">20%</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="tip_per_person">Tip Per Person</string>
    <string name="total_cost_per_person">Total Cost Per Person</string>
    <string name="tipAmount">$0.00</string>
    <string name="totalAmount">$0.00</string>
    <string name="hint1">$52.25</string>
    <string name="hint2">5</string>
    <string-array name="states">
        <item>California</item>
        <item>Utah</item>
        <item>Nevada</item>
    </string-array>
</resources>
